# composable-runtime

./: Cargo.toml  README.md
.github/workflows/: publish-component.yml  publish-wit.yml  publish.yml  release.yml
components/: Cargo.toml  build.sh
components/http/: README.md  wkg.toml
components/http/client/: Cargo.toml
components/http/client/src/: lib.rs
components/http/wit/: package.wit
crates/gateway-http/: Cargo.toml  README.md
crates/gateway-http/src/: config.rs  lib.rs  main.rs  server.rs  service.rs
crates/http-server/: Cargo.toml  README.md
crates/http-server/src/: config.rs  lib.rs  main.rs  server.rs  service.rs
crates/interceptor/: Cargo.toml  README.md
crates/interceptor/examples/: build-and-run.sh  wkg.toml
crates/interceptor/examples/logging/: Cargo.toml  README.md  build.sh  run.sh
crates/interceptor/examples/logging/calculator/src/: lib.rs
crates/interceptor/examples/logging/greeter/src/: lib.rs
crates/interceptor/examples/logging/logger/src/: lib.rs
crates/interceptor/examples/square/: README.md  build.sh  run.sh
crates/interceptor/examples/square/calculator/: calculator.py
crates/interceptor/examples/square/squarer/: Cargo.toml
crates/interceptor/examples/square/squarer/src/: lib.rs
crates/interceptor/examples/uppercase/: README.md  build.sh  run.sh
crates/interceptor/examples/uppercase/greeter/: greeter.js  package-lock.json  package.json
crates/interceptor/examples/uppercase/uppercaser/: Cargo.toml
crates/interceptor/examples/uppercase/uppercaser/src/: lib.rs
crates/interceptor/examples/wit/: package.wit
crates/interceptor/src/: builder.rs  encoder.rs  extractor.rs  generator.rs  lib.rs  main.rs  matcher.rs  types.rs
crates/interceptor/tests/: integration.rs
crates/interceptor/wit/: package.wit
crates/opentelemetry/: Cargo.toml  README.md
crates/opentelemetry/src/: lib.rs
crates/opentelemetry/wit/: package.wit
examples/7cs/: README.md  build.sh  run.sh  translate-api.js  wkg.toml
examples/7cs/components/: Cargo.toml
examples/7cs/components/capable-translator/: Cargo.toml
examples/7cs/components/configured-greeter/: Cargo.toml
examples/7cs/components/logging-advice/: Cargo.toml
examples/7cs/components/simple-greeter/: Cargo.toml
examples/7cs/components/simple-translator/: Cargo.toml
examples/7cs/components/translating-greeter/: Cargo.toml
examples/7cs/configs/: 1-component.toml  2-composition.toml  3-configuration.toml  4-capability.toml  5-cross-cutting-concerns.toml  6-channel.toml  7-collaboration-domain.toml  7-collaboration-env.toml  7-collaboration-ops.toml  infra.toml
examples/7cs/standalone/: compose.sh  compose.wac  invoke.sh
examples/7cs/wit/: package.wit
examples/hello-world/: README.md  build.sh  config.toml  run.sh
examples/hello-world/greeter/: Cargo.toml
examples/hello-world/greeter/src/: lib.rs
examples/hello-world/host/: Cargo.toml
examples/hello-world/host/src/: main.rs
examples/hello-world/wit/: greeter.wit
examples/host-capability/: README.md  config.toml  run.sh
examples/host-capability/greeter/: Cargo.toml
examples/host-capability/greeter/src/: lib.rs
examples/host-capability/host/: Cargo.toml
examples/host-capability/host/src/: main.rs
examples/host-capability/wit/: host-greeting.wit
examples/host-extension/: Cargo.toml  README.md  config.toml
examples/host-extension/greeter/src/: lib.rs
examples/host-extension/host/src/: main.rs
examples/http-gateway/: README.md  config.toml  greet.sh  run-gateway.sh  run.sh
examples/http-server/: README.md  config.toml  greet.sh  run-server.sh
examples/interceptor/: Cargo.toml  README.md  build.sh  config.toml  run.sh
examples/interceptor/greeter/src/: lib.rs
examples/interceptor/logger/: Cargo.toml
examples/interceptor/logger/src/: lib.rs
examples/interceptor/wit/: package.wit
examples/messaging/: README.md  config.toml  publish.sh  run.sh
examples/otel/: Cargo.toml  README.md  build.sh  config-with-components.toml  config-with-host-capability.toml  config-with-host-feature.toml  run.sh  wkg.toml
examples/otel-components/: README.md  build.sh  config-with-components.toml  config-with-host-capability.toml
examples/otel-components/grpc-capability/: Cargo.toml
examples/otel-components/grpc-to-http/: Cargo.toml
examples/otel-components/guest/: Cargo.toml
examples/otel-components/guest/src/: lib.rs
examples/otel-components/host/src/: main.rs
examples/otel-components/otel-to-grpc/: Cargo.toml
examples/otel-service/: Cargo.toml  README.md  build.sh  config.toml  curl.sh
examples/otel-service/guest/src/: lib.rs
examples/otel-service/host/: Cargo.toml
examples/otel-service/host/src/: main.rs
examples/otel-service/wit/: guest.wit
examples/otel/grpc-capability/: Cargo.toml
examples/otel/grpc-capability/src/: lib.rs
examples/otel/grpc-feature/: Cargo.toml
examples/otel/grpc-feature/src/: lib.rs
examples/otel/grpc-feature/wit/: grpc.wit
examples/otel/grpc-to-http/: Cargo.toml
examples/otel/guest/: Cargo.toml
examples/otel/host/: Cargo.toml
examples/otel/host/src/: main.rs
examples/otel/otel-to-grpc/: Cargo.toml
examples/otel/wit/: otel.wit
examples/runtime-service/: README.md
examples/service/: README.md  build.sh  config.toml
examples/service/greeter/: Cargo.toml
examples/service/host/: Cargo.toml
examples/service/wit/: greeter.wit
src/: composer.rs  context.rs  graph.rs  grpc.rs  lib.rs  loader.rs  main.rs  mapping.rs  message.rs  messaging.rs  registry.rs  runtime.rs  schema.rs  service.rs  types.rs  wit.rs
src/composition/: graph.rs  mod.rs  registry.rs  wit.rs
src/config/: handlers.rs  loader.rs  loaders.rs  mod.rs  processor.rs  types.rs
src/messaging/: activator.rs  bus.rs  channel.rs  dispatcher.rs  handler.rs  message.rs  mod.rs  reply.rs  service.rs
src/runtime/: core.rs  grpc.rs  host.rs  mod.rs
tests/: config-composition.rs  cycle_detection.rs  direct_wasm_file.rs  expects_and_enables.rs  host_capabilities.rs  host_extensions.rs  interceptors.rs  unsatisfied_imports.rs
tests/common/: mod.rs
wit/: messaging.wit
(+14 files in other folders)
