[package]
name = "composable-runtime"
version = "0.3.1"
description = "Modulewise Composable Runtime"
edition.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
categories = ["wasm"]
keywords = ["wasm"]

[workspace]
members = [".", "crates/interceptor"]

[workspace.package]
license = "Apache-2.0"
repository = "https://github.com/modulewise/composable-runtime"
edition = "2024"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
tempfile = "3"
tracing = "0.1"
wasm-encoder = "0.244"
wasmparser = "0.244"
wat = "1.244"
wit-parser = "0.244"

[dependencies]
anyhow.workspace = true
clap.workspace = true
composable-runtime-interceptor = { path = "crates/interceptor" }
http-body-util = "0.1"
hyper = { version = "1", features = ["client", "http1", "http2"] }
oci-client = "0.15"
petgraph = "0.8"
rustyline = "17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
static-config = "0.2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-util = { version = "0.7", optional = true }
toml = "0.9"
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
wac-graph = "0.9"
wac-types = "0.9"
wasm-pkg-client = "0.14"
wasmtime = "41"
wasmtime-wasi = "41"
wasmtime-wasi-config = "41"
wasmtime-wasi-http = "41"
wasmtime-wasi-io = "41"
wit-component = "0.244"
wit-parser.workspace = true

[dev-dependencies]
tempfile.workspace = true
wat.workspace = true

[features]
default = ["cli"]
cli = ["messaging"]
messaging = ["dep:tokio-util"]

[[bin]]
name = "composable"
path = "src/main.rs"
