[package]
name = "composable-runtime"
version = "0.3.1"
description = "Modulewise Composable Runtime"
edition.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
categories = ["wasm"]
keywords = ["wasm"]

[workspace]
members = [".", "crates/gateway-http", "crates/interceptor"]

[workspace.package]
license = "Apache-2.0"
repository = "https://github.com/modulewise/composable-runtime"
edition = "2024"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4.6", features = ["derive"] }
http-body-util = "0.1"
hyper = { version = "1", features = ["http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
wasm-encoder = "0.245"
wasmparser = "0.245"
wat = "1.245"
wit-parser = "0.245"

[dependencies]
anyhow.workspace = true
clap.workspace = true
composable-interceptor = { path = "crates/interceptor" }
http-body-util.workspace = true
hyper = { workspace = true, features = ["client", "http1", "http2"] }
oci-client = "0.16"
petgraph = "0.8"
rustyline = "17"
serde.workspace = true
serde_json.workspace = true
static-config = "0.2"
tokio.workspace = true
tokio-util = { version = "0.7", optional = true }
toml = "1"
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
wac-graph = "0.9"
wac-types = "0.9"
wasm-pkg-client = "0.15"
wasmtime = "42"
wasmtime-wasi = "42"
wasmtime-wasi-config = "42"
wasmtime-wasi-http = "42"
wasmtime-wasi-io = "42"
wit-component = "0.245"
wit-parser.workspace = true

[dev-dependencies]
tempfile.workspace = true
wat.workspace = true

[features]
default = ["cli"]
cli = ["messaging"]
messaging = ["dep:tokio-util"]

[package.metadata.docs.rs]
all-features = true

[[bin]]
name = "composable"
path = "src/main.rs"
