[package]
name = "composable-runtime"
version.workspace = true
description = "An Inversion of Control Runtime for Wasm Components"
edition.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
categories = ["wasm"]
keywords = ["wasm"]

[workspace]
members = [".", "crates/http-server", "crates/interceptor", "crates/opentelemetry"]

[workspace.package]
version = "0.5.0-alpha.5"
license = "Apache-2.0"
repository = "https://github.com/modulewise/composable-runtime"
edition = "2024"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4.6", features = ["derive"] }
http-body-util = "0.1"
hyper = { version = "1", features = ["http1", "http2"] }
hyper-util = { version = "0.1", features = ["server-graceful", "tokio"] }
jsonschema = { version = "0.46", default-features = false }
opentelemetry = "0.31"
opentelemetry-otlp = { version = "0.31", default-features = false }
opentelemetry_sdk = "0.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
wasm-encoder = "0.251"
wasmparser = "0.251"
wasmtime = { version = "46", features = ["component-model-async"] }
wat = "1.251"
wit-parser = "0.251"

[dependencies]
anyhow.workspace = true
bytes = "1"
clap.workspace = true
composable-interceptor = { version = "0.5.0-alpha.5", path = "crates/interceptor" }
http = "1"
http-body-util.workspace = true
hyper = { workspace = true, features = ["client", "http1", "http2"] }
oci-client = "0.16"
petgraph = "0.8"
rustyline = "17"
serde.workspace = true
serde_json.workspace = true
static-config = "0.2"
tokio.workspace = true
tokio-util = { version = "0.7", optional = true }
toml = "1"
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid.workspace = true
wac-graph = "0.10"
wac-types = "0.10"
wasm-pkg-client = "0.15"
wasmtime = { workspace = true }
wasmtime-wasi = { version = "46", features = ["p3"] }
wasmtime-wasi-config = "46"
wasmtime-wasi-http = { version = "46", features = ["p3"] }
wasmtime-wasi-io = "46"
wit-component = "0.251"
wit-parser.workspace = true

[dev-dependencies]
jsonschema.workspace = true
tempfile.workspace = true
wat.workspace = true

[features]
default = ["cli"]
cli = ["messaging"]
messaging = ["dep:tokio-util"]

[package.metadata.docs.rs]
all-features = true

[[bin]]
name = "composable"
path = "src/main.rs"
