[package]
name = "composable-otel"
version.workspace = true
description = "OpenTelemetry for Composable Runtime"
edition.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
categories = ["wasm"]
keywords = ["wasm", "opentelemetry"]

[dependencies]
anyhow.workspace = true
composable-runtime = { version = "0.5.0-alpha.3", path = "../..", default-features = false }
indexmap = "2"
opentelemetry.workspace = true
opentelemetry-otlp = { workspace = true, features = ["grpc-tonic", "http-proto", "reqwest-client", "trace", "logs"] }
opentelemetry_sdk = { workspace = true, features = [
    "rt-tokio",
    "experimental_trace_batch_span_processor_with_async_runtime",
    "experimental_logs_batch_log_processor_with_async_runtime",
    "trace",
    "logs",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt"] }
tracing = "0.1"
wasmtime = { workspace = true }
