[package]
name = "grpc-capability"
version = "0.1.0"
edition = "2024"
description = "Example of a generic gRPC host capability for composable-runtime"

[dependencies]
anyhow = "1"
bytes = "1"
composable-runtime = { path = "../../.." }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["sync", "rt"] }
tonic = "0.14"
tracing = "0.1"
wasmtime = "42"
