[package]
name = "host"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
composable-http-server = { path = "../../../crates/http-server", default-features = false }
composable-otel = { path = "../../../crates/opentelemetry" }
composable-runtime = { path = "../../.." }
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
