[package]
name = "host"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
composable-runtime = { path = "../../.." }
grpc-capability = { path = "../grpc-capability" }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
